<resources>
    <string name="app_name">ParkirKu</string>
    <string name="parkirJudul">ParkirKu</string>
    <string name="jam">Masukkan Total Jam</string>
    <string name="hitung">Hitung Biaya</string>
    <string name="jam_invalid">Jam Tidak Boleh Kosong</string>
    <string name="bayar">Total Yang harus Anda Bayarkan Adalah : Rp.</string>
    <string-array name="planets_array">
        <item>Motor</item>
        <item>Mobil</item>
    </string-array>
    <string name="harga_x">Total Biaya Parkir Anda Adalah \n Rp%1$d</string>
    <string name="user">Username :</string>
    <string name="pass">Password :</string>
    <string name="tentang_aplikasi">Tentang ParkirKu</string>
    <string name="copyright">ParkirKu merupakan aplikasi untuk melakukan pengecekan biaya parkir. Aplikasi ini dibuat untuk memenuhi asesmen mata kuliah mobile programming 1 \n\nDibuat oleh: \n Muhammad Fadhlan Sya\'uqi \n D3 RPLA 4501 \n 6706213049</string>
    <string name="bagikan">Bagikan</string>
    <string name="bagikan_template">%1s\n%2s\n%3$s</string>
    <string name="belum_ada_data">Yah, Belum ada data :(</string>
    <string name="histori">Histori</string>
    <string name="jam_x">%1$s Jam</string>
    <string name="tipe_x">%1$s</string>
    <string name="biaya_x">Rp %1$s</string>
    <string name="konfirmasi_hapus">Hapus histori?</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>
    <string name="switch_layout">Ubah tampilan</string>
    <string name="user_x">Username : %1$s</string>
    <string name="pass_x">Password : %1$s</string>
    <string name="iconDescription">background main</string>
    <string name="iconInstagramDescription">iconIG</string>
    <string name="iconGithubDescription">iconGITHUB</string>
    <string name="iconLinkedInDescription">iconLinkedIn</string>
    <string name="lokasi">Lokasi</string>
    <string name="parkirMotor">Biaya Parkir Motor</string>
    <string name="parkirMobil">Biaya Parkir Mobil</string>
    <string name="biayaParkir">Biaya Parkir di berbagai tempat</string>
    <string name="koneksi_error">Koneksi Error</string>
    <string name="channel_name">Updater</string>
    <string name="channel_desc">Update data biaya parkir otomatis</string>
    <string name="notif_title">Ada update biaya parkir baru!</string>
    <string name="notif_text">Cek sekarang yuk :)</string>
    <string name="splashDescription">Splashscreen Parkirku</string>
</resources>